--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_paul
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_hendrik
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:local-ssl.p12
+#server.ssl.key-store=classpath:local-ssl.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=123456
+#server.ssl.key-store-password=123456
 # The alias mapped to the certificate
-server.ssl.key-alias=local_ssl
-server.ssl.enabled=true
-server.port=8443
+#server.ssl.key-alias=local_ssl
+#server.ssl.enabled=true
+#server.port=8443
